From Demo To MyDev/sample/retrieveSource/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>AveragePrice__c</fullName>
        <description>Средняя стоимость автомобиля с учетом года и состояния.</description>
        <label>Средняя стоимость</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Condition__c</fullName>
        <label>Состояние</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Новая</fullName>
                </value>
                <value>
                    <fullName>б/у</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Описание</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PriceStatistics__c</fullName>
        <description>Статистика цен</description>
        <label>Статистика цен</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Production_year__c</fullName>
        <label>Год производства</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <label>VIN</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AUTO</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>АВТОМОБИЛИ</value>
        </filters>
        <label>АВТОМОБИЛИ</label>
    </listViews>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Все продукты</label>
    </listViews>
    <listViews>
        <fullName>Automobiles</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Production_year__c</columns>
        <columns>Condition__c</columns>
        <columns>AveragePrice__c</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>PriceStatistics__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Авто</value>
        </filters>
        <label>Автомобили - Мой Таксопарк</label>
    </listViews>
    <listViews>
        <fullName>Estate</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>ИМУЩЕСТВО</value>
        </filters>
        <label>ИМУЩЕСТВО</label>
    </listViews>
    <listViews>
        <fullName>Health</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>ЗДОРОВЬЕ</value>
        </filters>
        <label>ЗДОРОВЬЕ</label>
    </listViews>
    <listViews>
        <fullName>RealEstate</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>ЖИЛЬЕ</value>
        </filters>
        <label>ЖИЛЬЕ</label>
    </listViews>
    <listViews>
        <fullName>Travel</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>ПУТЕШЕСТВИЯ</value>
        </filters>
        <label>ПУТЕШЕСТВИЯ</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>